Don't recreate the position info source if we already have one

Task-number: QTBUG-67279
Change-Id: Iff2466cfe3b8bbdb77066f3318014fcb51e2e402
Reviewed-by: Michael Brüning <michael.bruning@qt.io>